namespace AsteroidsEngine
{
    public class Controller
    {
        public int Rotation { get; set; }
        public bool Fire1 { get; set; }
        public bool Fire2 { get; set; }
        public bool Thrust { get; set; }
    }
}